src/objects/BackupMachineResources__c.object
<CustomObject>
    <fields>
        <fullName>BackupMachineModel__c</fullName>
        <label>备用机型号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameStandbyMachine__c</fullName>
        <label>备用机名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>厂商</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>兴和</fullName>
                </value>
                <value>
                    <fullName>海涅</fullName>
                </value>
                <value>
                    <fullName>瑞贝科</fullName>
                </value>
                <value>
                    <fullName>雷蒙</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>备用机资源</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NameStandbyMachine__c</columns>
        <columns>NAME</columns>
        <columns>BackupMachineModel__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <label>备用机序列号</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>备用机资源</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>